--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,32 +1,44 @@
 <div class="container mt-5">
         
         <h1>商品詳細</h1>
-  <div class="row row-cols-3">
+  <div class="row row-cols-2">
        <div class="col-6 " >
           <%= image_tag @item.image, size: "200x200" %>
         </div>
-
-           <div class="col-2">
-             <tr><b>
-                 商品名<br>
-                 商品説明<br>
-                 ジャンル<br>
-                 税抜価格<br>
-                 ステータス
-                 </b>
-             </tr>
-           </div>
            
-           <div class="col-4">
-              <td>
-                  <%= @item.name %><br>
-                  <%= @item.introduction %><br>
-                  <%= @item.genre.name %><br>
-              　   <%= @item.price %>円<br>
-              　   <%=@item.is_active %><br>
-              </td>
+           <div class="col-6">
+              <table class="table table-hover">
+                 <tr>
+                     <th><b>商品名</b></th>
+                     <td><%= @item.name %></td>
+                 </tr>
+                 <tr>
+                     <th><b>商品説明</b></th>
+                     <td><%= @item.introduction %></td>
+                 </tr>
+                 <tr>
+                     <th><b>ジャンル</b></th>
+                     <td><%= @item.genre.name %></td>
+                 </tr>
+                 <tr>
+                     <th><b>税抜価格</b></th>
+                     <td><%= @item.price %>円</td><br>
+                 </tr>
+                 <tr>
+                     <th><b>ステータス</b></th>
+                     <td><% if @item.is_active? %>
+                       <span>販売中</sapn>
+                       <% else %>
+                       <span>販売停止中</span>
+                       <% end%>
+                     </td>
+                 </tr>
+                 <tr>
+                    <div class = "text-center">
+                    <th></th>    
+                    <td><%= link_to "編集する", edit_admin_item_path(@item.id), class:"btn btn-success" %></td>
+                    </div>
+                 </tr>
             </div>　
-        
-            <%= link_to "編集する", edit_admin_item_path(@item.id), class:"btn btn-success" %>
   </div>
-</div>
+ </div>
