--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
    <header>
      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
        <div class="container ">
-         <a class="text-white navbar-brand" href="/"><span>Nagano Cake</span></a>
+         <a class="text-white navbar-brand" href="/"><span>NagaNo CAKE</span></a>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
            <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %>
