--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -23,9 +23,9 @@
     <th scope = "col"> </th>
  </tr>
 </thead>
+    <% @total_x = 0 %>
   <% @cart_items.each do |cart_item| %>
   <tbody>
-    <% @total_x = 0 %>
       <tr>    
               <td><%= image_tag cart_item.item.get_image, size: "65x65" %></td>
               <td><%= cart_item.item.name %> </td>
@@ -34,8 +34,7 @@
                   <!--<td>%= (cart_item.item.price * 1.1).floor %></td>-->
               <!--上記参考文＝ｒｂ.に記述したため下記に変更-->
               <td>
-              <%= form_with model: @Cart_items, url: cart_items_path, method: :post do |f| %>
-              <%= f.hidden_field :id, :value => cart_item.id %>
+              <%= form_with model: cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
               <%= f.select :amount, *[1..10] %>
               <%= f.submit '変更', class:'btn btn-sm btn-success' %>
               </td>
@@ -74,7 +73,7 @@
         
     <div class="text-center">
         <% if current_customer.cart_items.any? %>
-            <%= link_to new_item_path, class: 'btn btn-sm btn-success' do %>
+            <%= link_to orders_new_path, class: 'btn btn-sm btn-success' do %>
             情報入力に進む
             <% end %>
           <% end %>
