--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,17 @@
-<h1>ご注文ありがとうございました</h1>
-
+<div class = "containar mt-5">
+   <div class = "text-center">
+      <div class = "row-3">
+          
+         <div class = "col-2 offset-2">
+          </div>
+        
+             <div class = "col-4">
+                <h1>ご注文ありがとうございました</h1>
+             </div>
+        
+           <div class = "col-2 offset-2">
+         </div>
+         
+      </div>
+   </div>
+</div>
