--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,2 +1,18 @@
-<h1>Public::Orders#confirm</h1>
-<p>Find me in app/views/public/orders/confirm.html.erb</p>
+<h1>注文情報確認</h1>
+
+<table class="table cart-table">
+ <thead>
+  <tr>
+    <th scope = "col">商品名</th>
+    <th scope = "col"> </th> 
+    <th scope = "col">単価(税込み)</th>
+    <th scope = "col">数量</th>
+    <th scope = "col">小計</th>
+ </tr>
+</thead>
+
+
+<h4>支払方法</h4>
+
+
+<h4>お届け先</h4>
