--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -64,7 +64,7 @@
           </div>
           <br>
           
-        <%= link_to orders_path do %>
+        <%= link_to  orders_confirm_path do %>
         確認画面に進む
         <% end %>
     <% end %>
