--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<div class="container mt-5">
+<div class="row">
+  <!--<div class="col-xs-12">-->
+    <h2 class="head-line text-center title_h2">配送先編集</h2>
+    <%= form_with model @address, url: address_path(@addresses.id) method: :patch do |f| %>
+
+      <div class="col-xs-10">
+          <div class="form-group col-xs-12">
+            <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
+            <%= f.text_field :post_code, class: "col-xs-4" %>
+          </div>
+
+          <div class="form-group col-xs-12">
+             <%= f.label :"住所", class: "col-xs-3" %>
+             <%= f.text_field :address, class: "col-xs-7" %>
+          </div>
+
+          <div class="form-group col-xs-12">
+           <%= f.label :"宛名", class: "col-xs-3" %>
+           <%= f.text_area :name, class: "col-xs-4" %>
+          </div>
+            <%= f.submit '変更内容を保存',class: "col-xs-2 pull-right btn-primary" %>
+        <% end %>
+      </div>
+  <!--</div>-->
+</div>
+</div>
