--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,56 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<div class="container mt-5">
+<div class="row">
+ <div class="col-xs-8">
+ <table class="table addresses-table">
+  <thead>
+       <%= form_with model: @address, url: addresses_path, method: :post do |f| %>
+     <tr>
+       <th>
+          <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
+       </th>
+       <td>
+          <%= f.text_field :post_code, class: "col-xs-4" %>
+       </td>
+     </tr>
+       <br>
+       <tr>
+         <th>
+           <%= f.label :"住所", class: "col-xs-3" %>
+         </th>
+         <td>
+            <%= f.text_field :address, class: "col-xs-7" %>
+         </td>
+        </tr>
+      <br>
+        <tr>
+          <th>
+            <%= f.label :"宛名", class: "col-xs-3" %>
+          </th>
+           <td>
+            <%= f.text_field :name, class: "col-xs-4" %>
+          </td>
+       </tr>
+      <br>
+       <tr>
+         <th></th>
+          <td>
+            <%= f.submit '新規登録',class: "col-xs-2 pull-right btn-primary" %>
+            <% end %>
+          </td>
+       </tr>
+  </thead>
+   <tbody>
+      <% @addresses.each do |address| %>
+    <tr>
+      <td><%= address.postal_code.to_s.insert(3, "-") %></td>
+      <td class="text-left"><%= address.address %></td>
+      <td class="text-left"><%= address.name %></td>
+      <td class="text-center"><%= link_to "編集する", edit_address_path(address), class: "btn btn-primary" %>
+        <%= link_to "削除する", address_path(address), method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure?"} %>
+      </td>
+    </tr>
+    <% end %>
+   </tbody>
+</table>
+ </div>
+</div>
