--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -2,19 +2,20 @@
 <div class="row">
   <!--<div class="col-xs-12">-->
     <h2 class="head-line text-center title_h2">配送先編集</h2>
-    <%= form_with model @address, url: address_path(@addresses.id) method: :patch do |f| %>
-
-      <div class="col-xs-10">
+    <%= form_with model: @address, url: address_path, method: :patch do |f| %>
+           
+           <table class = "table">
+           
           <div class="form-group col-xs-12">
             <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
-            <%= f.text_field :post_code, class: "col-xs-4" %>
+            <%= f.text_field :postal_code, class: "col-xs-4" %>
           </div>
-
+           <br>
           <div class="form-group col-xs-12">
              <%= f.label :"住所", class: "col-xs-3" %>
              <%= f.text_field :address, class: "col-xs-7" %>
           </div>
-
+            <br>
           <div class="form-group col-xs-12">
            <%= f.label :"宛名", class: "col-xs-3" %>
            <%= f.text_area :name, class: "col-xs-4" %>
