--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container mt-5">
+    <h2>配送先登録/一覧</h2>
 <div class="row">
  <div class="col-xs-8">
  <table class="table addresses-table">
@@ -9,7 +10,7 @@
           <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
        </th>
        <td>
-          <%= f.text_field :post_code, class: "col-xs-4" %>
+          <%= f.text_field :postal_code, class: "col-xs-4" %>
        </td>
      </tr>
        <br>
@@ -39,18 +40,30 @@
           </td>
        </tr>
   </thead>
-   <tbody>
+ </table>
+ 
+   <table class = "table table-hover">
+      <thead>
+        <tr><b>
+          <th scope = "col">郵便番号</th>
+          <th scope = "col">住所</th>
+          <th scope = "col">宛名</th>
+          <th scope = "col"></th>
+           </b>
+        </tr>
+    </thead>
+    <tbody>
       <% @addresses.each do |address| %>
-    <tr>
-      <td><%= address.postal_code.to_s.insert(3, "-") %></td>
+      <tr>
+      <td><%= address.postal_code %></td>
       <td class="text-left"><%= address.address %></td>
       <td class="text-left"><%= address.name %></td>
-      <td class="text-center"><%= link_to "編集する", edit_address_path(address), class: "btn btn-primary" %>
-        <%= link_to "削除する", address_path(address), method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure?"} %>
+      <td><%= link_to "編集する", edit_address_path(address), class: "btn btn-primary" %>
+      <%= link_to "削除する",   address_path(address), method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure?"} %>
       </td>
-    </tr>
-    <% end %>
-   </tbody>
-</table>
+      </tr>
+      <% end %>
+    </tbody>
+   </table>
  </div>
 </div>
