--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,28 +1,49 @@
 <div class="container mt-5">
 <div class="row">
   <!--<div class="col-xs-12">-->
-    <h2 class="head-line text-center title_h2">配送先編集</h2>
+    <h2 class="text-center">配送先編集</h2>
     <%= form_with model: @address, url: address_path, method: :patch do |f| %>
            
            <table class = "table">
-           
-          <div class="form-group col-xs-12">
-            <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
-            <%= f.text_field :postal_code, class: "col-xs-4" %>
-          </div>
+           <tr>
+            <div class="form-group col-xs-12">
+              <th>
+                <%= f.label :"郵便番号（ハイフンなし）",class: "col-xs-3" %>
+              </th>
+                <td>
+                  <%= f.text_field :postal_code, class: "col-xs-4" %>
+                </td>
+              </div>
+            </tr>
            <br>
-          <div class="form-group col-xs-12">
-             <%= f.label :"住所", class: "col-xs-3" %>
-             <%= f.text_field :address, class: "col-xs-7" %>
-          </div>
+           <tr>
+            <div class="form-group col-xs-12">
+             <th>
+                <%= f.label :"住所", class: "col-xs-3" %>
+             </th>
+              <td>
+                 <%= f.text_field :address, class: "col-xs-7" %>
+              </td>
+            </div>
+            </tr>
             <br>
-          <div class="form-group col-xs-12">
-           <%= f.label :"宛名", class: "col-xs-3" %>
-           <%= f.text_area :name, class: "col-xs-4" %>
-          </div>
-            <%= f.submit '変更内容を保存',class: "col-xs-2 pull-right btn-primary" %>
-        <% end %>
-      </div>
+            <tr>
+              <div class="form-group col-xs-12">
+                <th>
+                  <%= f.label :"宛名", class: "col-xs-3" %>
+                </th> 
+                  <td>
+                    <%= f.text_field :name, class: "col-xs-4" %>
+                  </td>
+                </div>
+              <tr>
+                <th>
+                 </th>
+                  <td>
+                   <%= f.submit '変更内容を保存',class: "col-xs-2 pull-right btn-primary" %>
+                  </td>
+                  <% end %>
+              </tr>
+    </div>
   <!--</div>-->
-</div>
 </div>
