--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,18 +1,81 @@
-<h1>注文情報確認</h1>
+<div class="container mt-5">
+ <div class="row">
+  <h1>注文情報確認</h1>
+    <div class="col-xs-8">
+  <br>
+   <table class="table cart-table">
+     <thead>
+      <tr>
+        <th scope = "col">商品名</th>
+        <th scope = "col"> </th> 
+        <th scope = "col">単価(税込み)</th>
+        <th scope = "col">数量</th>
+        <th scope = "col">小計</th>
+     </tr>
+    </thead>
+   <tbody>
+      <% @total_x = 0%>
+      <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td>
+              <%= image_tag cart_item.item.get_image, size: "65x65" %>
+              <%= cart_item.item.name %>
+          </td>
+          <td></td>
+          <td>¥<%= cart_item.item.with_tax_price %>円</td>
+          <td><%= cart_item.amount %></td>
+           <td><%= cart_item.subtotal %>
+                  <% @total_x += cart_item.subtotal %>円</td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+    </div>
+    <%= form_with model: @order, url: orders_path do |f| %>
+    <div class="col-xs-3">
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>送料</td>
+              <td>
+                  <%= @order.postage %>800円
+                  <!--<#%= f.hidden_field :postage => @order.postage %>-->
+              </td>
+            </tr>
+            <tr>
+              <td>商品合計</td>
+              <td>
+                ¥<%= @total_x %>円
+              </td>
+            </tr>
+            <tr>
+              <td class=>請求金額</td>
+              <td>
+                ¥<%= (@total_x + 800) %>円
+                <%= f.hidden_field :total_payment, :value => (@total_x + 800) %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  </div>
+  <div class="row">
+    <h3>支払方法</h3>
+      <%= @order.payment_i18n %>
+      <!--<#%= f.hidden_field :payment, :value => @order.payment %>-->
+      <br>
+    <h3>お届け先</h3>
+      <div><%= @current_customer.postal_code + " " + @current_customer.address %></div>
+      <div><%= @current_customer.last_name + " " + @current_customer.first_name  %></div>
 
-<table class="table cart-table">
- <thead>
-  <tr>
-    <th scope = "col">商品名</th>
-    <th scope = "col"> </th> 
-    <th scope = "col">単価(税込み)</th>
-    <th scope = "col">数量</th>
-    <th scope = "col">小計</th>
- </tr>
-</thead>
-
-
-<h4>支払方法</h4>
-
-
-<h4>お届け先</h4>
+      <!--<#%= @order.postal_code %></br>-->
+      <!--<#%= f.hidden_field :postal_code, :value => @order.postal_code %>-->
+      <!--<#%= @order.city %></br>-->
+      <!--<#%= f.hidden_field :address, :value => @order.address %>-->
+      <!--<#%= @order.name %></br>-->
+      <!--<#%= f.hidden_field :name, :value => @order.name %>-->
+    <div class="text-center">
+      <%= f.submit "注文を確定する", class: "btn btn-success btn-lg text-center" %>
+    </div>
+    <% end %>
+</div>
