--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,70 +1,44 @@
 <div class="container mt-5">
-    
-    <h1>注文情報入力</h1>
-        <p></p>
-        
-        <p>商品名</p>
-        <%= @customer.last_name + " " + @customer.first_name %>
-        
-    <div>
-        <%= form_with model: @order, url: orders_confirm_path do |f| %>
-        <b>支払情報</b>
-        <p></p>
-        <% %>
-        <%= f.radio_button :payment, "credit_card" %>
-        <%= f.label :payment_credit_card, "クレジットカード" %>
-        
-        <%= f.radio_button :payment, "transfer" %>
-        <%= f.label :payment_transfer, "銀行振込" %>
+  <div class="row my-3">
+    <div class="col-sm-10 px-sm-0 mx-auto">
+      
+      <h2>注文情報入力</h2>
+      <%= form_with model: @order, url: orders_confirm_path, method: :post do |f| %>
+      <h4><b>支払い方法</b></h4>
+      <!--<#%= f.radio_button :payment, 0 %>クレジットカード<br>-->
+      <!--<#%= f.radio_button :payment, 1 %>銀行振込-->
+      <%= f.radio_button :payment, Order.payments.key(0) %>
+      <%= f.label :payment_credit_card, Order.payments_i18n[:credit_card] %>
+
+      <%= f.radio_button :payment, Order.payments.key(1) %>
+      <%= f.label :payment_transfer, Order.payments_i18n[:transfer]%>
+      
+      <h4><b>お届け先</b></h4>
+      <%= f.radio_button :select_address, 0, checked: true , class: "ml-4"  %>ご自身の住所<br>
+      <div><%= @current_customer.postal_code + " " + @current_customer.address %></div>
+      <div><%= @current_customer.last_name + " " + @current_customer.first_name  %></div>
+      
+        <%= f.radio_button :select_address, 1, class: "ml-4 mt-3"  %>登録済み住所から選択<br>
+        <%= f.select :address_id, options_from_collection_for_select(current_customer.addresses, :id ,
+        :address_display), size: 50 %>
+        <br>
+        <%= f.radio_button :select_address, 2, class: "ml-4 mt-3"  %>新しいお届け先<br>
+      <table class="ml-5">
+        <tr>
+          <td>郵便番号（ハイフン無し）</td>
+          <td><%= f.text_field :address_postal_code, class: "form-control", size: 40, id: "customer_postal_code" %></td>
+        </tr>
+        <tr>
+          <td>住所</td>
+          <td><%= f.text_field :delivery_address, class: "form-control", size: 40, id: "customer_address" %></td>
+        </tr>
+        <tr>
+          <td>宛名</td>
+          <td><%= f.text_field :delivery_name, class: "form-control", size: 40 %></td>
+        </tr>
+      </table>
+      <div class="text-center mt-3"><%= f.submit "確認画面へ進む", class: "btn btn-primary" %></div>
+      <% end %>
     </div>
-
-
-
-    <b>お届け先</b>
-        <%= f.radio_button :delivery_address, 0 %>
-        <%= f.label :city, "ご自身の住所" %>
-        <br>
-        <%= @customer.postal_code %><br/>
-        <%= @customer.address %><br/>
-        <%= @customer.last_name + " " + @customer.first_name %>
-        <br>
-        <%= f.radio_button :delivery_address, 1 %>
-        <%= f.label :city, "登録済住所から選択" %>
-        <br>
-    <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :name) %>
-    
-    <%= f.radio_button :delivery_address, 2 %>
-          <%= f.label :delivery_address, "新しいお届け先" %>
-          <br>
-          <div class="row">
-              <div class="col-lg-2">
-                <%= f.label :delivery_post_code, "郵便番号(ハイフンなし）" %>
-              </div>
-              <div>
-                <%= f.text_field :delivery_post_code,class:"col-lg-2" %>
-              </div>
-          </div>
-          </br>
-          <div class="row">
-              <div class="col-lg-2">
-                <%= f.label :delivery_address, "住所" %>
-              </div>
-              <div>
-                <%= f.text_field :delivery_address , class:"col-lg-4"%>
-              </div>
-          </div>
-          </br>
-          <div class="row">
-              <div class="col-lg-2">
-                <%= f.label :delivery_name, "宛名" %>
-              </div>
-              <div>
-                <%= f.text_field :delivery_name, class:"col-lg-2"%>
-              </div>
-          </div>
-          <br>
-          
-        <%= link_to  orders_confirm_path do %>
-        確認画面に進む
-        <% end %>
-    <% end %>
+  </div>
+</div>
