--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -30,7 +30,7 @@
                 <% end %>
                 <%= @total_amount %>
               </td>
-              <td class="align-middle"><%= order.order_status %></td>
+              <td class="align-middle"><%= order.order_status_i18n %></td>
             </tr>
           <% end %>
         </tbody>
@@ -71,7 +71,7 @@
                 <% end %>
                 <%= @total_amount %>
               </td>
-              <td class="align-middle"><%= order.order_status %></td>
+              <td class="align-middle"><%= order.order_status_i18n %></td>
             </tr>
           <% end %>
         </tbody>
