--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -8,7 +8,7 @@
         </tr>
         <tr><th class="table-active" style="width:20%">注文日</th><td><%= @order.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td></tr>
         <tr><th class="table-active" style="width:20%">配送先</th><td>
-            <!--〒<#%= @order.shipping_postcode %> <#%= @order.shipping_address %> <#%= @order.shipping_name %></td></tr>-->
+            〒<%= @order.delivery_postal_code %> <%= @order.delivery_address %> <%= @order.delivery_name %></td></tr>
         <tr><th class="table-active" style="width:20%">支払い方法</th><td><%= @order.payment_i18n %></td></tr>
         <tr><th class="table-active" style="width:20%"><%= f.label :order_status, "注文ステータス" %></th>
           <td>
@@ -61,15 +61,16 @@
         <tr>
           <th class="table-active" style="width:50%">商品合計</th>
           <td>
-            <!--<#% @add_tax_total_x = order_detail.tax_price(@order.total_x) %>-->
-            <%= @add_tax_total_x %>円
+            <% @add_tax_total_payment = with_tax_price(@order.total_payment) %>
+            <%= @add_tax_total_payment %>円
+            <!--<#% @order.total_payment = order_details_with_tax_price(@order.total_payment) %>-->
           </td>
         </tr>
         <tr><th class="table-active" style="width:50%">送料</th><td><%= @postage %>円</td></tr>
         <tr>
           <th class="table-active" style="width:50%">請求金額合計</th>
           <td>
-            <!--<#% @total_x_add_postage = @add_tax_total_x + @postage %>-->
+            <!--<#%= @order.total_payment_add_postage = @add_tax_total_payment + @postage %>-->
             <%= @total_x_add_postage %> 円
           </td>
         </tr>
