--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -7,26 +7,29 @@
         <thead>
           <tr>
             <th class="table-active" style="width:10%">注文日</th>
-            <th class="table-active" style="width:30%">配送先</th>
-            <th class="table-active" style="width:30%">注文商品</th>
-            <th class="table-active" style="width:10%">支払金額</th>
-            <th class="table-active" style="width:10%">ステータス</th>
-            <th class="table-active" style="width:10%">注文詳細</th>
+            <th class="table-active" style="width:35%">配送先</th>
+            <th class="table-active" style="width:15%">注文商品</th>
+            <th class="table-active" style="width:13%">支払金額</th>
+            <th class="table-active" style="width:13%">ステータス</th>
+            <th class="table-active" style="width:14%">注文詳細</th>
           </tr>
         </thead>
         <tbody>
-          <% @orders.each do |order| %>
             <tr>
+          <% @orders.each do |order| %>
               <td class="align-middle"><%= order.created_at.strftime('%Y/%m/%d') %></td>
-              <td></td>
-              <!--<td class="align-middle"><#%= "〒#{order.shipping_postcode}" %><br><#%= order.shipping_address %><br><#%= order.shipping_name %></td>-->-->
-              <td class="align-middle" style="word-break:break-all">
+              <td class="align-middle">〒<%= "#{order.delivery_postal_code}" %>
+                <br>
+                    <%= order.delivery_address %>
+                <br><%= order.delivery_name %>
+              </td>
+                <td class="align-middle" style="word-break:break-all">
                 <% order.order_details.each do |order_detail| %>
                   <%= link_to order_detail.item.name,item_path(order_detail.item) %><br>
                 <% end %>
               </td>
               <td class="align-middle"><%= "#{order.total_payment}円" %></td>
-              <td class="align-middle"><%= order.order_status %></td>
+              <td class="align-middle"><%= order.order_status_i18n %></td>
               <td class="align-middle"><%= link_to "表示する", order_path(order), class: "btn btn-primary"  %></td>
             </tr>
           <% end %>
