--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -7,18 +7,20 @@
       <table class="table table-bordered">
         <tr><th class="table-active">注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d') %></td></tr>
         <tr><th class="table-active">配送先</th><td>
-            <!--<#%= "〒#{@order.shipping_postcode}" %><br><#%= @order.shipping_address %><br><#%= @order.shipping_name %></td></tr>-->
+            〒<%=@order.delivery_postal_code %><br>
+            <%= @order.delivery_address %><br>
+            <%= @order.delivery_name %></td></tr>
         <tr><th class="table-active">支払い方法</th><td><%= @order.payment_i18n %></td></tr>
-        <tr><th class="table-active">ステータス</th><td><%= @order.order_status %></td></tr>
+        <tr><th class="table-active">ステータス</th><td><%= @order.order_status_i18n %></td></tr>
 
       </table>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 px-3 offset-1">
       <p>請求情報</p>
       <table class="table table-bordered">
-        <tr><th class="table-active">送料</th><td>800</td></tr>
-        <tr><th class="table-active">商品合計</th><td><%= @order.total_payment - 800 %></td></tr>
-        <tr><th class="table-active">請求合計</th><td><%= @order.total_payment %></td></tr>
+        <tr><th class="table-active">送料</th><td>800円</td></tr>
+        <tr><th class="table-active">商品合計</th><td><%= @order.total_payment - 800 %>円</td></tr>
+        <tr><th class="table-active">請求合計</th><td><%= @order.total_payment %>円</td></tr>
       </table>
     </div>
   </div>
@@ -38,9 +40,9 @@
         <% @order.order_details.each do |order_detail| %>
           <tr>
             <td style="word-break:break-all"><%= order_detail.item.name %></td>
-            <td><%= order_detail.tax_price %></td>
+            <td>¥<%= order_detail.tax_price %></td>
             <td><%= order_detail.amount %></td>
-            <td><%= order_detail.amount * order_detail.tax_price %></td>
+            <td>¥<%= order_detail.amount * order_detail.tax_price %></td>
           </tr>
         <% end %>
         </tbody>
