--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,58 +1,51 @@
 <div class = "container mt-5">
-<h1><%= @customer.first_name %>
+<h3><%= @customer.first_name %>
     <%= @customer.last_name %>
-     さんの会員詳細</h1>
-     
+     さんの会員詳細</h3>
           <div>
              <%= link_to edit_admin_customer_path, class: "badge rounded-pill bg-dark text-warning" do %>
              編集する
               <% end %>
           </div>
-         
+          <br>
      <table class="table table-hover">
-        <tr>
-          <th><b>会員ID</b></th>
-            <td><%= @customer.id %></td>
-            <br>
-        </tr> 
-        <tr>
-          <th><b>氏名</b></th>
-            <td><%= @customer.last_name %>
-                <%= @customer.first_name %></td>
-             <br>
-        </tr>
-        <tr>         
-          <th><b>カナ</b></th>
-            <td><%= @customer.last_name_kana %>
-            <%= @customer.first_name_kana %></td>
-             <br>
-        </tr>
-        <tr>     
-          <th><b>郵便番号</b></th>
-             <td><%= @customer.postal_code %></td>
-              <br>
-        <tr>      
-          <th><b>住所</b></th>
-             <td><%= @customer.address %></td>
-              <br>
-        </tr>
-        <tr>          
-          <th><b>電話番号</b></th>
-             <td><%= @customer.telephone_number %></td>
-              <br>
-        </tr>
-        <tr>
-          <th><b>メールアドレス</b></th>
-             <td><%= @customer.email %></td>
-              <br>
-        </tr>
-        <tr>   
+            <tr>
+              <th><b>会員ID</b></th>
+                <td><%= @customer.id %></td>
+            </tr> 
+            <tr>
+              <th><b>氏名</b></th>
+                <td><%= @customer.last_name %>
+                    <%= @customer.first_name %></td>
+            </tr>
+            <tr>         
+              <th><b>カナ</b></th>
+                <td><%= @customer.last_name_kana %>
+                <%= @customer.first_name_kana %></td>
+            </tr>
+            <tr>     
+              <th><b>郵便番号</b></th>
+                 <td><%= @customer.postal_code %></td>
+            <tr>      
+              <th><b>住所</b></th>
+                 <td><%= @customer.address %></td>
+            </tr>
+            <tr>          
+              <th><b>電話番号</b></th>
+                 <td><%= @customer.telephone_number %></td>
+            </tr>
+            <tr>
+              <th><b>メールアドレス</b></th>
+                 <td><%= @customer.email %></td>
+            </tr>
+            <tr>   
            <th><b>会員ステータス</b></th>
-             <td><% if @customer.is_deleted? %></td>
-             <span>退会</span>
+             <td><% if @customer.is_deleted? %>
+             <p class="text-danger"><span>退会</span></p>
                <% else %>
-            <span>有効</span>
+            <p class="text-success"><span>有効</span></p>
                <% end %>
+              </td>
         </tr>
      </table>
 </div     
