--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 </span>
 <span>
-<%=link_to withdraw_path, method: :patch, class: "btn btn-danger" do %>
+<%=link_to withdraw_path, method: :patch, class: "btn btn-danger", method: :patch, data: { confirm: "本当に退会しますか？" } do %>
 退会する
 <% end %>
 </span>
