--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,12 +1,13 @@
 
 <div class = "containar mt-5">
-<h1>商品一覧</h1>
-
+<h2>商品一覧<span>(全<%= @items.count %>件)</h2>
+            <div class="row mt-3 mb-3 text-center text-xs-center text-sm-center text-md-left">
             <% @items.each do |item| %>
             <tr>
                  <b>  
                 <td>  
-               <div class = "col d-flex">
+                 <div class="col-xs-10 col-sm-10 col-md-6 col-lg-3">
+                    <div class = "col d-flex">
                     <%=link_to item_path(item.id) do %>
                     <%= image_tag item.get_image, class: "img-thumbnail", size: "200x200" %>
                     <% end %></td>
@@ -19,6 +20,7 @@
             <% end %>
                 </div>
             </tr>
+            <%= paginate @items %>
   </div>
   
   
