--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -6,7 +6,8 @@
             <tr>
                  <b>  
                 <td>  
-                 <div class="col-xs-10 col-sm-10 col-md-6 col-lg-3">
+                 <div class="col-xs-10">
+                 <!--<div class="col-xs-10 col-sm-10 col-md-6 col-lg-3">-->
                     <div class = "col d-flex">
                     <%=link_to item_path(item.id) do %>
                     <%= image_tag item.get_image, class: "img-thumbnail", size: "200x200" %>
@@ -17,10 +18,15 @@
                     <td>￥<%= item.price %></td>
                  <br>
                 </b>
-            <% end %>
-                </div>
+                    <% end %>
+                    </div>
+                  </div>
             </tr>
-            <%= paginate @items %>
   </div>
-  
-  
+  <p></p>
+           <h5>
+              <span>
+                 <%= paginate @items %>
+              </span>
+            </h5>
+ 
